add admin sign in and some fixes

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # .env.example
 PORT=4000
 # Set your database connection information here 
-#DB_URL=your-database-url
+DB_URL=your-database-url
+JWT_KEY=ankap
