add auth module

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PORT=4000
 # Set your database connection information here 
 DB_URL=your-database-url
 JWT_KEY=ankap
+TOKEN_COOKIE_EXPIRES_IN=30  #days
